# src/controllers/review.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Route, Tags , Get , Post , Body} from "tsoa";
+import { Controller, Route, Tags , Get , Post , Body , Patch , Path} from "tsoa";
 import { ReviewDTO } from "../dto/review.dto";
 import { reviewService } from "../services/review.service";
 import { Review } from "../models/review.model";
@@ -29,6 +29,21 @@ export class ReviewController extends Controller {
         return reviewService.createReview(game!.id!, rating, content);
       }
     }
+
+    @Patch("{id}")
+    public async updateReview(
+      @Body() requestBody: ReviewDTO,
+      @Path() id: number
+    ): Promise<ReviewDTO | null> {
+      const { game, rating, content } = requestBody;
+      if(!game?.id){
+        notFound("Game "+game?.id);
+      }else{
+        return reviewService.updateReview(id, game!.id!, rating, content);
+      }
+    }
+
+    
 
   }
  
